# blog_system

./: README.md  manage.py  pyproject.toml
api/: auth.py  posts.py
blog_system/: __init__.py  config.py  extensions.py  models.py  routes.py  schemas.py
blog_system/api/: auth.py  posts.py
core/: __init__.py  config.py  extensions.py  models.py  routes.py
instance/: blog_system.db
scripts/: create_database.py  start.sh
tests/: test_api.py
