[tool.poetry]
name = "blog-system"
version = "0.1.0"
description = ""
authors = ["wislla <wislla.vasconcelos@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.0.3"
flask-sqlalchemy = "^3.1.1"
flask-marshmallow = "^1.2.1"
marshmallow-sqlalchemy = "^1.0.0"
flask-bcrypt = "^1.0.1"
flask-jwt-extended = "^4.6.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
