[tool.poetry]
name = "blog_system"
version = "0.1.0"
description = "A simple blog system using Flask and SQLite"
authors = ["Seu Nome <seu.email@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.11"
flask = "^2.3.3"
flask-sqlalchemy = "^3.0.0"
flask-migrate = "^4.0.0"
pydantic = "^2.0.0"

[tool.poetry.dev-dependencies]
pytest = "^7.4.0"
mypy = "^0.990"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
